Downloads/devops-cloud-security-engineer-assessment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: assessment
  labels:
    name: assessment
